# vla.cpp

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yml  vla-ci.yml
ci/: .gitignore  README.md  aggregate_report.py  build_servers.sh  check_commits.sh  check_thresholds.py  orchestrate.sh  remote_server.sh  run_remote.sh
ci/agent/: CMakeLists.txt  agent.cpp  ctl.cpp  vla_ctl.proto
ci/baselines/: m4.json  orin.json  rtx3060.json  rtx3090.json
ci/config/: hosts.env.example  matrix.env
ci/lib/: common.sh
docs/: ADOPTION.md  ARCHITECTURE.md  DOCKER.md  KNOWN_ISSUES.md
docs/backend/: metal.md  ov.md  windows-wsl.md  wsl.md
eval/: Dockerfile.client  README.md  collect_libero_results.py  collect_simpler_results.py  docker-compose.yml  run_aloha_client.sh  run_aloha_server.sh  run_libero.sh  run_libero_client.sh  run_libero_server.sh  run_libero_wsl.sh  run_simpler.sh  setup_aloha_env.sh
eval/client/: adapters.py  benchmark.py  compare_benchmarks.py  run_ALOHA_client_direct.py  run_libero_eval.py  run_sim_client_direct.py  run_simpler_client_direct.py  run_simpler_eval.py  vla_cpp_client.py
eval/reports/: report-agx-orin.md  report-orin-nano.md  report-rtx-3060.md
eval/sim/libero/: __init__.py  libero_env.py  setup_libero.sh
eval/sim/simpler/: __init__.py  setup_SimplerEnv.sh  simpler_env.py
eval/utils/: service.py
eval/utils/sim_adapters/: __init__.py  base.py  libero.py  simpler.py
examples/chat/: README.md  vlm_chat_client.py  vlm_pb2.py
patches/: llama.cpp-vla.patch  patch.sh
scripts/: bitvla_int2_pack.py  convert_bitvla_to_gguf.py  convert_evo1_to_gguf.py  convert_gr00t_n1_5_to_gguf.py  convert_gr00t_n1_6_to_gguf.py  convert_gr00t_n1_7_to_gguf.py  convert_openvla_oft_to_gguf.py  convert_pi05_to_gguf.py  convert_pi0_to_gguf.py  convert_smolvla_to_gguf.py  convert_vla_adapter_to_gguf.py  convert_vla_jepa_to_gguf.py  install_ov.sh  merge_pi05_mmproj_to_gguf.py  merge_pi0_mmproj_to_gguf.py  merge_smolvla_mmproj_to_gguf.py  openvino.patch  print_versions.sh  quantize_gguf.py
src/: arch.h  model.cpp  model.h
src/kernels/bitvla/: bitnet_kernels.cu  bitnet_kernels.h  bitvla_fp32head_cuda.cu  bitvla_fp32head_cuda.h  bitvla_lm_cuda.cu  bitvla_lm_cuda.h  bitvla_vit_cuda.cu  bitvla_vit_cuda.h
src/models/: bitvla.cpp  evo1.cpp  gguf_reader.h  gr00tn1d5.cpp  gr00tn1d6.cpp  gr00tn1d7.cpp  openvla_oft.cpp  pi0.cpp  pi05.cpp  smolvla.cpp  vision_common.h  vla_adapter.cpp  vla_jepa.cpp
src/serving/: server.cpp  vla-cli.cpp  vla.proto  vlm-server.cpp  vlm.proto
src/vlm/: engine.cpp  engine.h
tests/: CMakeLists.txt  predict_check.cpp  test_vision_common.cpp
tests/py/: test_converters.py
